--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,30 @@
-alembic==1.0.8
+alembic==1.0.10
 aniso8601==6.0.0
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
-Flask-JWT-Extended==3.18.0
+Flask-Cors==3.0.7
+Flask-JWT-Extended==3.18.1
 flask-marshmallow==0.10.0
 Flask-Migrate==2.4.0
 Flask-RESTful==0.3.7
-Flask-SQLAlchemy==2.3.2
+Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
-Jinja2==2.10
-Mako==1.0.8
+Jinja2==2.10.1
+Mako==1.0.9
 MarkupSafe==1.1.1
 marshmallow==2.19.2
-marshmallow-sqlalchemy==0.16.1
+marshmallow-sqlalchemy==0.16.2
 mysqlclient==1.4.2.post1
 PyJWT==1.7.1
 python-dateutil==2.8.0
 python-editor==1.0.4
-pytz==2018.9
+pytz==2019.1
 requests==2.21.0
 six==1.12.0
-SQLAlchemy==1.3.1
-urllib3==1.24.1
-Werkzeug==0.15.1
+SQLAlchemy==1.3.3
+urllib3==1.24.3
+Werkzeug==0.15.2
